src/modal-checkout/checkout.scss
#newspack_modal_checkout {
	padding: 24px;
	h3 {
		font-size: 16px;
		margin: 0 0 16px;
	}
	p {
		margin: 0 0 16px;
	}
	.woocommerce-message,
	.woocommerce-error,
	.woocommerce-info {
		border-radius: 6px;
	}
	.woocommerce-message {
		background-color: #f6f7f7;
		color: #757575;
	}
	input[type='text'],
	input[type='email'],
	input[type='tel'],
	input[type='number'],
	input[type='password'],
	input[type='submit'],
	select,
	textarea {
		border-radius: 6px;
		padding: 12px 16px;
		font-size: 14px;
		line-height: 24px;
		border-color: #ddd;
	}
	input[type='checkbox'] {
		border-radius: 6px;
	}
	input[type='checkbox']:checked {
		background-color: var( --newspack-theme-color-primary );
		border-color: var( --newspack-theme-color-primary );
	}
	.button {
		font-size: 14px;
		background-color: transparent;
		color: inherit;
		border: 1px solid #dddddd;
	}
	.order-details-summary {
		background: #f6f7f7;
		text-align: center;
		padding: 24px;
		border-radius: 6px;
		margin: 0 0 24px;
		h2 {
			font-size: 16px;
			line-height: 24px;
			margin: 0;
		}
	}
	#customer_details {
		.woocommerce-billing-fields {
			p {
				margin: 8px 0 24px;
			}
			label {
				font-size: 14px;
				line-height: 20px;
				font-weight: 600;
				margin-bottom: 8px;
			}
		}
	}
	#order_review {
		margin: 0 0 24px;
	}
	#payment {
		.wc_payment_methods {
			margin: 0 0 24px;
		}
		.wc_payment_method {
			border: 1px solid #ddd;
			border-radius: 6px;
			padding: 16px;
			margin: 0 0 16px;
			font-size: 14px;
			line-height: 20px;
			> label {
				font-weight: 600;
			}
			&.selected {
				background-color: #f5fdff;
				border-color: #3366ff;
			}
			input.input-radio[name='payment_method'] + label::before {
				box-shadow: 0 0 0 1px #dddddd;
			}
			input.input-radio[name='payment_method']:checked + label::before {
				background: #3366ff;
				box-shadow: 0 0 0 1px #3366ff;
			}
			.payment_box {
				font-size: 14px;
				line-height: 20px;
				padding: 0;
				background: transparent;
				margin: 16px 0 0;
			}
			> label:first-of-type {
				margin: 0;
			}
		}
		// Hide radio button if there's only one payment method.
		.wc_payment_method:first-child:nth-last-child( 1 ) {
			label:first-of-type::before {
				display: none;
			}
		}
		.wc-saved-payment-methods {
			margin: 0;
			padding: 0 0 0 8px;
			li input[type='radio'] {
				margin-right: 8px;
			}
		}
		.newspack-cover-fees,
		.woocommerce-SavedPaymentMethods-saveNew {
			display: flex;
			margin: 16px 0 0;
			input {
				margin-right: 8px;
			}
		}
	}
	#order_review {
		padding: 16px 24px;
		border-radius: 6px;
		background: #f6f7f7;
		table {
			font-size: 14px; // Prevent relative font size
			line-height: 24px;
			border: 0;
			margin: 0;
			th,
			td {
				font-size: 14px; // Prevent relative font size
				padding: 4px 0;
				border-color: #dddddd;
				> * {
					white-space: nowrap;
				}
				vertical-align: top;
			}
			th {
				background-color: inherit;
				font-weight: 600;
				text-align: left;
			}
			td:last-child {
				width: 1%;
			}
			tr.cart-subtotal {
				th {
					font-weight: normal;
				}
			}
			tr.recurring-totals {
				th {
					padding-top: 24px;
				}
			}
			tfoot tr:last-child {
				th,
				td {
					border-bottom: 0;
				}
			}
		}
	}
	.woocommerce-terms-and-conditions-wrapper {
		margin: 0;
		.woocommerce-privacy-policy-text {
			font-size: 14px;
			line-height: 20px;
			color: #757575;
		}
	}
	.woocommerce-form-coupon {
		p {
			display: flex;
			align-items: center;
			input[type='text'] {
				margin-right: 8px;
				flex-grow: 1;
			}
		}
	}
	#continue_order,
	#place_order {
		background-color: var( --newspack-theme-color-primary );
		color: #fff; /* TODO: Fix dynamic contrast */
		font-size: 14px;
		font-weight: 600;
		display: block;
		width: 100%;
	}
	#edit_details {
		border: 0;
		width: 100%;
	}
	/* Hide reCAPTCHA badge */
	.grecaptcha-badge {
		visibility: hidden !important;
	}
}

